Remove list manifest functionality (#46)
